<resources>
    <string name="app_name">EarthWeather</string>
    <string name="title_home">Home</string>
    <string name="title_city">My Cities</string>
    <string name="title_settings">Settings</string>


    <string name="degree_celcius">\u2103</string>
    <string name="degree_fahrenheit">\u2109</string>
    <string name="degree_kelvin">\u212A</string>
    <!--    <string name="degree_celcius">0C</string>-->
    <string name="wind_title">Winds</string>
    <string name="more">Show More</string>
    <string name="search">Search</string>
    <string name="setting">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="date_text">Fri, 4 Feb</string>
    <string name="city_text_placeholder">City/Town</string>
    <string name="temp_placeholder">Degrees</string>
    <string name="forecast_placeholder">Clear Sky</string>

    <string name="last_update">lastUpdate</string>

    <string name="pref_weather">Weather</string>
    <string name="pref_location">Location</string>
    <string name="pref_unit">Units</string>
    <string name="pref_lang">Language</string>
    <string name="comform_title">Comfort Level</string>
    <string name="humid_title">Humidity</string>
    <!--    <string name="app_name">EarthWeather</string>-->
<!--    -->
    <string-array name="pref_lang_arr">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Portuguese</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="pref_lang_arr_values">
        <item>en</item>
        <item>fr</item>
        <item>sp</item>
        <item>pt</item>
        <item>ar</item>
    </string-array>

<!--    Temperature units-->
    <string-array name="pref_unit_arr">
        <item>Kelvin</item>
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="pref_units_arr_values">
        <item>standard</item>
        <item>metric</item>
        <item>imperial</item>
    </string-array>
</resources>