<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.galgolabs.earthweather.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="refreshCity"
            app:argType="boolean"
            android:defaultValue="false"
            app:nullable="false"/>
        <argument
            android:name="myCityName"
            app:argType="string"
            app:nullable="true"/>
        <argument
            android:name="myCityLat"
            app:argType="float"
            android:defaultValue="0.0"/>
        <argument
            android:name="myCityLng"
            app:argType="float"
            android:defaultValue="0.0" />
    </fragment>

    <fragment
        android:id="@+id/navigation_city"
        android:name="com.galgolabs.earthweather.ui.dashboard.DashboardFragment"
        android:label="@string/title_city"
        tools:layout="@layout/fragment_dashboard" >

        <argument
            android:name="myCityName"
            app:argType="string"
            app:nullable="true"/>
        <argument
            android:name="myCityLat"
            app:argType="float"
            android:defaultValue="0.0"/>
        <argument
            android:name="myCityLng"
            app:argType="float"
            android:defaultValue="0.0" />

        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home2"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true"
            app:launchSingleTop="true" >
            <argument
                android:name="myCityName"
                app:argType="string"
                app:nullable="true"/>
            <argument
                android:name="myCityLat"
                app:argType="float"
                android:defaultValue="0.0"/>
            <argument
                android:name="myCityLng"
                app:argType="float"
                android:defaultValue="0.0" />
        </action>
        <action
            android:id="@+id/action_navigation_dashboard_to_placesFragment"
            app:destination="@id/placesFragment"
            app:popUpTo="@id/navigation_city" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.galgolabs.earthweather.ui.notifications.SettingsFragment"
        android:label="@string/title_settings"
        />
    <fragment
        android:id="@+id/placesFragment"
        android:name="com.galgolabs.earthweather.ui.dashboard.add.PlacesFragment"
        android:label="fragment_places_list"
        tools:layout="@layout/fragment_places_list" >
        <action
            android:id="@+id/action_placesFragment_to_navigation_city"
            app:destination="@id/navigation_city"
            app:popUpTo="@id/navigation_city" >
            <argument
                android:name="myCityName"
                app:argType="string"
                app:nullable="true"/>
            <argument
                android:name="myCityLat"
                app:argType="float"
                android:defaultValue="0.0"/>
            <argument
                android:name="myCityLng"
                app:argType="float"
                android:defaultValue="0.0" />
        </action>
    </fragment>
</navigation>